# celix

./: .clang-tidy  .gitignore  .gitpod.Dockerfile  .gitpod.yml  AGENTS.md  CMakeLists.txt  README.md  conanfile.py
.devcontainer/: Containerfile  README.md  build-project-with-conan.sh  devcontainer.json  setup-project-with-conan.sh
.github/workflows/: build_and_test.yml  containers.yml  coverage.yml  fuzzing.yml  macos.yml  ubuntu.yml
.theia/: settings.json
bundles/cxx_remote_services/admin/gtest/: CMakeLists.txt
bundles/cxx_remote_services/discovery_configured/gtest/: CMakeLists.txt
bundles/cxx_remote_services/discovery_configured/src/: ConfiguredDiscoveryManager.cc
bundles/cxx_remote_services/integration/gtest/: CMakeLists.txt
bundles/cxx_remote_services/integration/src/: TestExportImportRemoteServiceFactory.cc
bundles/deployment_admin/: CMakeLists.txt
bundles/deployment_admin/src/: deployment_admin.c  log_sync.c
bundles/event_admin/event_admin/src/: celix_event.c  celix_event_adapter.c  celix_event_admin.c
bundles/http_admin/gtest/: CMakeLists.txt
bundles/http_admin/gtest/src/: http_websocket_tests.cc
bundles/http_admin/http_admin/src/: service_tree.c
bundles/logging/log_admin/gtest/: CMakeLists.txt
bundles/logging/log_admin/src/: celix_log_admin.c
bundles/logging/log_helper/gtest/: CMakeLists.txt
bundles/pubsub/integration/: CMakeLists.txt
bundles/pubsub/pubsub_discovery/src/: psd_activator.c
bundles/pubsub/pubsub_serializer_avrobin/gtest/: CMakeLists.txt
bundles/pubsub/pubsub_serializer_json/gtest/: CMakeLists.txt
bundles/pubsub/pubsub_spi/include/: pubsub_constants.h
bundles/pubsub/pubsub_spi/src/: pubsub_endpoint.c
bundles/pubsub/pubsub_topology_manager/: CMakeLists.txt
bundles/pubsub/pubsub_topology_manager/gtest/: CMakeLists.txt
bundles/pubsub/pubsub_topology_manager/gtest/src/: PubSubTopologyManagerTestSuite.cc
bundles/pubsub/pubsub_topology_manager/src/: pstm_activator.c  pubsub_topology_manager.c  pubsub_topology_manager.h
bundles/pubsub/pubsub_utils/gtest/: CMakeLists.txt
bundles/remote_services/discovery_common/src/: discovery_activator.c  endpoint_discovery_poller.c  endpoint_discovery_server.c
bundles/remote_services/discovery_configured/src/: discovery_impl.c
bundles/remote_services/discovery_etcd/src/: etcd_watcher.c
bundles/remote_services/discovery_zeroconf/gtest/: CMakeLists.txt
bundles/remote_services/discovery_zeroconf/src/: discovery_zeroconf_announcer.c  discovery_zeroconf_watcher.c
bundles/remote_services/remote_service_admin_dfi/gtest/: CMakeLists.txt
bundles/remote_services/remote_service_admin_dfi/src/: remote_service_admin_dfi.c
bundles/remote_services/rsa_common/gtest/: CMakeLists.txt
bundles/remote_services/rsa_common/src/: endpoint_description.c
bundles/remote_services/rsa_dfi_utils/gtest/: CMakeLists.txt
bundles/remote_services/rsa_rpc_json/gtest/: CMakeLists.txt
bundles/remote_services/rsa_rpc_json/src/: rsa_json_rpc_endpoint_impl.c  rsa_json_rpc_impl.c  rsa_json_rpc_proxy_impl.c
bundles/remote_services/topology_manager/src/: topology_manager.c
bundles/remote_services/topology_manager/tms_tst/: CMakeLists.txt
bundles/shell/remote_shell/src/: connection_listener.c
bundles/shell/shell/: CMakeLists.txt
bundles/shell/shell/gtest/: CMakeLists.txt
bundles/shell/shell/src/: Shell.cc  c_shell_activator.c  lb_command.c  update_command.c
bundles/shell/shell_ncui/: CMakeLists.txt
bundles/shell/shell_ncui/gtest/: CMakeLists.txt
bundles/shell/shell_ncui/gtest/src/: ShellNcuiTestSuite.cc
bundles/shell/shell_ncui/src/: activator.c  shell_ncui.c  shell_ncui.h
bundles/shell/shell_tui/gtest/: CMakeLists.txt
cmake/: AddGTest.cmake  Findcivetweb.cmake
cmake/celix_project/: CelixProject.cmake  CelixTest.cmake  CodeCoverage.cmake
cmake/cmake_celix/: BundlePackaging.cmake
documents/: framework.md
documents/building/: README.md  fuzz_testing.md
documents/cmake_commands/: README.md
examples/celix-examples/dm_example/: CMakeLists.txt
examples/celix-examples/hello_world_c/: CMakeLists.txt
examples/conan_test_package/: conanfile.py
examples/conan_test_package_v2/: conanfile.py
libs/dfi/gtest/: CMakeLists.txt
libs/dfi/gtest/src/: json_rpc_test.c  (+11 more)
libs/dfi/src/: dyn_function.c  dyn_interface.c  dyn_type.c  json_serializer.c
libs/error_injector/: CMakeLists.txt
libs/error_injector/api/: celix_error_injector.h
libs/error_injector/curl/: CMakeLists.txt
libs/etcdlib/: CMakeLists.txt
libs/etcdlib/api/: etcdlib.h
libs/etcdlib/gtest/: CMakeLists.txt
libs/etcdlib/gtest/src/: EtcdlibMockTestSuite.cc  EtcdlibStubTestSuite.cc  EtcdlibTestSuite.cc  main.cc  populate_etcd.c  watch_etcd.c
libs/etcdlib/src/: etcd.c  etcdlib.c  etcdlib_private.h
libs/framework/: CMakeLists.txt
libs/framework/gtest/: CMakeLists.txt
libs/framework/include/: bundle.h  bundle_archive.h  bundle_context.h  bundle_revision.h  celix_api.h  celix_bundle.h  celix_bundle_activator.h  celix_bundle_context.h  celix_constants.h  celix_framework.h
libs/framework/include_deprecated/: bundle_context.h  find_hook_service.h
libs/framework/src/: attribute.c  bundle.c  bundle_archive.c  bundle_archive_private.h  bundle_cache.c  bundle_context.c  bundle_private.h  bundle_revision.c  bundle_revision_private.h  capability.c  celix_bundle_cache.c  celix_bundle_cache.h  celix_framework_utils.c  celix_framework_utils_private.h  celix_launcher.c  celix_libloader.c  celix_log.c  celix_log.h  framework.c  framework_bundle_lifecycle_handler.c  framework_private.h  manifest.c  manifest_parser.c  module.c  requirement.c  resolver.c  service_reference.c  service_registration.c  service_registry.c  service_registry_private.h  service_tracker.c  service_tracker_customizer.c  wire.c
libs/promises/gtest/: CMakeLists.txt
libs/pushstreams/gtest/: CMakeLists.txt
libs/rcm/gtest/: CMakeLists.txt
libs/utils/: CMakeLists.txt
libs/utils/gtest/: CMakeLists.txt
libs/utils/include/: celix_convert_utils.h  celix_utils.h
libs/utils/src/: celix_convert_utils.c  celix_err.c  celix_file_utils.c  utils.c
(+156 files in other folders)
